--- a/src/app/back-office/sidebar/sidebar.component.html
+++ b/src/app/back-office/sidebar/sidebar.component.html
@@ -24,8 +24,8 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
-        <li  class="nav-item ml-1">
-          <a href="pages/calendar.html" class="nav-link">
+        <li  class="nav-item ml-2">
+          <a [routerLink]="['/back/stock']" class="nav-link">
             <i class="fas fa-cubes"></i>
             <p>
               Stock
