--- a/src/app/back-office/stock/stock-list/stock-list.component.css
+++ b/src/app/back-office/stock/stock-list/stock-list.component.css
@@ -6,3 +6,10 @@
   position: absolute !important;
   bottom: 1.7rem !important;
 }
+.fontWeight
+{
+  font-weight: 700;
+}
+.stockRp{
+  color: white;
+}
