--- a/src/app/front-office/product/product-list/product-list.component.html
+++ b/src/app/front-office/product/product-list/product-list.component.html
@@ -16,7 +16,7 @@
                            <img src="../../assets/images/p1.jpg" class="img-thumbnail img-fluid" alt="">
                            <div class="men-cart-pro">
                               <div class="inner-men-cart-pro">
-                                 <a href="single.html" class="link-product-add-cart">Quick View</a>
+                                 <a href="single.html" class="link-product-add-cart">{{p.code}}</a>
                               </div>
                            </div>
                            <span class="product-new-top">New</span>
@@ -26,10 +26,10 @@
                               <div class="grid_meta">
                                  <div class="product_price">
                                     <h4>
-                                       <a href="single.html">toys(barbie)</a>
+                                       <a href="single.html">{{p.libelle}}</a>
                                     </h4>
                                     <div class="grid-price mt-2">
-                                       <span class="money ">$575.00</span>
+                                       <span class="money ">{{p.prixUnitaire}}</span>
                                     </div>
                                  </div>
                                  <ul class="stars">
