--- a/src/app/back-office/stock/update-stock/update-stock.component.html
+++ b/src/app/back-office/stock/update-stock/update-stock.component.html
@@ -1,24 +1,25 @@
-<h3  style="margin-top: -20px" class="ml-2" >Ajouter Stock</h3>
-<form [formGroup]="stock" (ngSubmit)="addStock()">
+<h3 style="margin-top: -20px" class="ml-2">Modifier Stock</h3>
+<form [formGroup]="stock" (submit)="updateStock()">
   <div class="col-md-12">
     <label for="inputId" class="form-label">Id</label>
     <input
-      formControlName="id"
+      formControlName="idStock"
       type="number"
-      name="inputId"
+      name="idStock"
       class="form-control"
       id="inputId"
       readonly
       [ngClass]="{
-        'is-invalid': stock.get('id').touched && stock.get('id').invalid
+        'is-invalid':
+          stock.get('idStock').touched && stock.get('idStock').invalid
       }"
     />
   </div>
   <div
     class="invalid-feedback"
-    *ngIf="stock.get('id').touched && stock.get('id').invalid"
+    *ngIf="stock.get('idStock').touched && stock.get('idStock').invalid"
   >
-    <p *ngIf="stock.get('id').errors.required">id est oblogatoire</p>
+    <p *ngIf="stock.get('idStock').errors.required">id est oblogatoire</p>
   </div>
 
   <div class="col-md-12">
@@ -84,22 +85,47 @@
     </div>
   </div>
   <div class="col-md-12 my-2">
-    <button [disabled]="stock.invalid"   data-bs-toggle="modal" data-bs-target="#staticBackdrop"  class="btn btn-primary">Ajouter stock</button>
-    <button (click)="discardAdd()" class="btn btn-dark ml-3">Annuler</button>
+    <button
+      [disabled]="stock.invalid"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#staticBackdrop"
+    >
+      Modifier stock
+    </button>
+    <button (click)="discardUpdate()" class="btn btn-dark ml-3">Annuler</button>
   </div>
 </form>
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="staticBackdrop"
+  data-bs-backdrop="static"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">Gestion Stock</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
-      <div class="modal-body">
-       stock ajouté avec success
-      </div>
+      <div class="modal-body">stock modifié avec success</div>
       <div class="modal-footer">
-        <button  type="button"  (click)="stockAdded()" class="btn btn-success" data-bs-dismiss="modal">Ok</button>
+        <button
+          (click)="stockUpdated()"
+          type="button"
+          class="btn btn-success"
+          data-bs-dismiss="modal"
+        >
+          Ok
+        </button>
       </div>
     </div>
   </div>
