--- a/src/app/back-office/rayon/rayon-list/rayon-list.component.html
+++ b/src/app/back-office/rayon/rayon-list/rayon-list.component.html
@@ -1,42 +1,50 @@
 <div class="row">
   <div class="col-12">
     <div class="text-right my-2 pr-1">
-      <!--   (click)="toogleAddStock()" -->
       <i
+        (click)="toogleAddRayon()"
         style="font-size: 2rem; cursor: pointer; color: #4bb543"
         class="fas fa-plus-circle mx-auto"
       ></i>
     </div>
   </div>
   <div class="col-12">
-    <!--  <app-add-stock
-      *ngIf="addstockStatus"
-      (addStockStatus)="toogleStatus()"
-      (addedStock)="addStockToList($event)"
-    ></app-add-stock>
-    <app-update-stock (updated)="getStockList($event)" (updateStockStatus)="CloseUpdate()" [selectedStock]="stockToUpdate" *ngIf="updateStockStatus"></app-update-stock> -->
+    <app-add-rayon
+      (addRayonStatus)="toogleAddRayon()"
+      (rayonAdded)="addRayonToList($event)"
+      *ngIf="addRayonStatus"
+    ></app-add-rayon>
+    <app-update-rayon (updated)="getRayonList($event)" (updateRayonStatus)="CloseUpdate()" [selectedRayon]="rayonToUpdate" *ngIf="updateRayonStatus"></app-update-rayon>
+
   </div>
   <div
     *ngFor="let item of rayon_list; let i = index"
     class="col-12 col-sm-6 col-md-4"
   >
-    <div class="card" [style.backgroundColor]="item.produitList.length > 0 ? '' : '#dc3545'" >
-      <div [class]="item.produitList.length > 0 ? 'card-body' : 'card-body RayonVide'"
-        >
+    <div
+      class="card"
+      [style.backgroundColor]="item.produitList.length > 0 ? '' : '#dc3545'"
+    >
+      <div
+        [class]="
+          item.produitList.length > 0 ? 'card-body' : 'card-body RayonVide'
+        "
+      >
         <h5 style="font-weight: bold">{{ item.libelle | uppercase }}</h5>
         <div class="text-right" style="margin-top: -1.7rem">
           <i
             class="fas fa-pen-square"
             style="font-size: 1.6rem; cursor: pointer"
+             (click)="toogleUpdateRayon(item)"
           ></i>
-          <!--  (click)="toogleUpdateStock(item)" -->
+
           <i
             data-bs-toggle="modal"
             data-bs-target="#staticBackdrop"
             class="fas fa-trash-alt ml-2"
             style="font-size: 1.5rem; cursor: pointer"
+            (click)="getRayonById(item.idRayon)"
           ></i>
-          <!--           (click)="getStockID(item.idStock)" -->
         </div>
 
         <p class="card-text">Code : {{ item.code }}</p>
@@ -48,9 +56,10 @@
           style="color: white"
           id="productListButton"
           class="btn btn-dark"
+          [routerLink]="['/back/rayon/detailrayon', item.idRayon]"
         >
-          <!--         [routerLink]="['/back/stock/detailstock', item.idStock]"
- -->
+
+
           Afficher les produit
         </button>
       </div>
@@ -69,7 +78,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Gestion Stock</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">Gestion Rayon</h5>
         <button
           type="button"
           class="btn-close"
@@ -77,13 +86,17 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="modal-body">Etes vous sur de vouloir supprimer ce stock?</div>
+      <div class="modal-body">Etes vous sur de vouloir supprimer ce Rayon?</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Anuuler
         </button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-          <!-- (click)="delete()" -->
+        <button
+          type="button"
+          class="btn btn-danger"
+          data-bs-dismiss="modal"
+          (click)="delete()"
+        >
           Confirmer
         </button>
       </div>
