--- a/src/app/back-office/rayon/update-rayon/update-rayon.component.html
+++ b/src/app/back-office/rayon/update-rayon/update-rayon.component.html
@@ -1,5 +1,6 @@
-<h3 style="margin-top: -20px" class="ml-2">Ajouter Rayon</h3>
-<form [formGroup]="rayon" (ngSubmit)="addRayon()">
+
+<h3 style="margin-top: -20px" class="ml-2">Modifier Rayon</h3>
+<form [formGroup]="rayon" (ngSubmit)="updateRayon()">
   <div class="col-md-12">
     <label for="idRayon" class="form-label">Id Rayon</label>
     <input
@@ -79,7 +80,7 @@
       </p>
       <p *ngIf="rayon.get('code').errors.minlength">
         la longueur minimale est
-        {{ rayon.get('code').errors.minlength.requiredLength }}
+        {{ rayon.get("code").errors.minlength.requiredLength }}
         characters
       </p>
 
@@ -97,9 +98,9 @@
       data-bs-target="#staticBackdrop"
       class="btn btn-primary"
     >
-      Ajouter Rayon
+      Modifier Rayon
     </button>
-    <button  (click)="discardAdd()" class="btn btn-dark ml-3">Annuler</button>
+    <button (click)="discardUpdate()" class="btn btn-dark ml-3">Annuler</button>
   </div>
 </form>
 <div
@@ -126,7 +127,7 @@
       <div class="modal-footer">
         <button
           type="button"
-          (click)="RayonAdded()"
+          (click)="rayonUpdated()"
           class="btn btn-success"
           data-bs-dismiss="modal"
         >
