--- a/src/app/back-office/rayon/add-rayon/add-rayon.component.html
+++ b/src/app/back-office/rayon/add-rayon/add-rayon.component.html
@@ -14,14 +14,13 @@
           rayon.get('idRayon').touched && rayon.get('idRayon').invalid
       }"
     />
-  </div>
-  <div
+    <div
     class="invalid-feedback"
     *ngIf="rayon.get('idRayon').touched && rayon.get('idRayon').invalid"
   >
     <p *ngIf="rayon.get('idRayon').errors.required">id est oblogatoire</p>
   </div>
-
+  </div>
   <div class="col-md-12">
     <label for="libelle" class="form-label">Libelle Rayon</label>
     <input
@@ -40,10 +39,10 @@
       *ngIf="rayon.get('libelle').touched && rayon.get('libelle').invalid"
     >
       <p *ngIf="rayon.get('libelle').errors.required">
-        Libelle stock est obligatoire
+        Libelle rayon est obligatoire
       </p>
       <p *ngIf="rayon.get('libelle').errors.pattern">
-        Libelle stock accepte seulement des caractéres
+        Libelle rayon accepte seulement des caractéres
       </p>
       <p *ngIf="rayon.get('libelle').errors.minlength">
         la longueur minimale est
@@ -102,6 +101,7 @@
     <button  (click)="discardAdd()" class="btn btn-dark ml-3">Annuler</button>
   </div>
 </form>
+
 <div
   class="modal fade"
   id="staticBackdrop"
@@ -114,7 +114,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Gestion Stock</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">Gestion rayon</h5>
         <button
           type="button"
           class="btn-close"
@@ -122,7 +122,7 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="modal-body">stock ajouté avec success</div>
+      <div class="modal-body">rayon ajouté avec success</div>
       <div class="modal-footer">
         <button
           type="button"
