--- a/src/app/back-office/stock/stock-detail/stock-detail.component.html
+++ b/src/app/back-office/stock/stock-detail/stock-detail.component.html
@@ -1,7 +1,6 @@
 
 
 <div
-  [style.backgroundColor]="stock.qte >= stock.qteMin ? '' : '#dc3545'"
   class="card"
 >
 <div class="text-right mr-2 mt-2">
@@ -13,6 +12,8 @@
     <h3 style="font-weight: 700">{{ stock.libelleStock | uppercase }}</h3>
     <h6 style="font-weight: 600">Quantité : {{ stock.qte }}</h6>
     <h6 style="font-weight: 600">Quantité minimale : {{ stock.qteMin }}</h6>
+    <h6 style="font-weight: 600">Date création : {{ stock.createdAt }}</h6>
+    <h6 ngClass *ngIf="stock.updatedAt!=null" style="font-weight: 600">Date modification : {{ stock.updatedAt }}</h6>
   </div>
 </div>
 <div style="background-color: white" class="row m-1">
@@ -36,6 +37,7 @@
         <h6 style="font-weight: 500" class="card-text">
           &nbsp;Prix unitaire : {{ item.prixUnitaire }}
         </h6>
+
       </div>
     </div>
   </div>
