--- a/src/app/back-office/rayon/update-rayon/update-rayon.component.html
+++ b/src/app/back-office/rayon/update-rayon/update-rayon.component.html
@@ -95,7 +95,7 @@
     <button
       [disabled]="rayon.invalid"
       data-bs-toggle="modal"
-      data-bs-target="#staticBackdrop"
+      data-bs-target="#staticBackdrop1"
       class="btn btn-primary"
     >
       Modifier Rayon
@@ -105,17 +105,17 @@
 </form>
 <div
   class="modal fade"
-  id="staticBackdrop"
+  id="staticBackdrop1"
   data-bs-backdrop="static"
   data-bs-keyboard="false"
   tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
+  aria-labelledby="staticBackdrop1Label"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Gestion rayon</h5>
+        <h5 class="modal-title" id="staticBackdrop1Label">Gestion rayon</h5>
         <button
           type="button"
           class="btn-close"
