--- a/src/app/back-office/stock/update-stock/update-stock.component.html
+++ b/src/app/back-office/stock/update-stock/update-stock.component.html
@@ -89,7 +89,7 @@
       [disabled]="stock.invalid"
       class="btn btn-primary"
       data-bs-toggle="modal"
-      data-bs-target="#staticBackdrop"
+      data-bs-target="#staticBackdrop1"
     >
       Modifier stock
     </button>
@@ -98,17 +98,17 @@
 </form>
 <div
   class="modal fade"
-  id="staticBackdrop"
+  id="staticBackdrop1"
   data-bs-backdrop="static"
   data-bs-keyboard="false"
   tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
+  aria-labelledby="staticBackdrop1Label"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Gestion Stock</h5>
+        <h5 class="modal-title" id="staticBackdrop1Label">Gestion Stock</h5>
         <button
           type="button"
           class="btn-close"
