--- a/src/app/back-office/navbar/navbar.component.html
+++ b/src/app/back-office/navbar/navbar.component.html
@@ -50,112 +50,37 @@
 
     <!-- Messages Dropdown Menu -->
     <li class="nav-item dropdown">
-      <a class="nav-link" data-toggle="dropdown" href="#">
+      <a class="nav-link" data-bs-toggle="dropdown">
         <i class="far fa-comments"></i>
-        <span class="badge badge-danger navbar-badge">3</span>
+        <span class="badge badge-danger navbar-badge"> {{stockList.length}} </span>
       </a>
       <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-        <a href="#" class="dropdown-item">
+        <a *ngFor="let item of stockList" class="dropdown-item">
           <!-- Message Start -->
           <div class="media">
-            <img
-              src="dist/img/user1-128x128.jpg"
-              alt="User Avatar"
-              class="img-size-50 mr-3 img-circle"
-            />
             <div class="media-body">
               <h3 class="dropdown-item-title">
-                Brad Diesel
+                {{ item.libelleStock }}
                 <span class="float-right text-sm text-danger"
-                  ><i class="fas fa-star"></i
-                ></span>
+                  ><i (click)="deleteNotif(item)" style="cursor: pointer;" class="fas fa-times"></i>
+                </span>
               </h3>
-              <p class="text-sm">Call me whenever you can...</p>
+              <p class="text-sm">
+                Votre quantité minimale est {{ item.qteMin }} mais votre stock
+                contient {{ item.qte }}
+              </p>
               <p class="text-sm text-muted">
-                <i class="far fa-clock mr-1"></i> 4 Hours Ago
+                <i class="far fa-clock mr-1"></i> {{ item.updatedAt }}
               </p>
             </div>
           </div>
           <!-- Message End -->
         </a>
+
         <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item">
-          <!-- Message Start -->
-          <div class="media">
-            <img
-              src="dist/img/user8-128x128.jpg"
-              alt="User Avatar"
-              class="img-size-50 img-circle mr-3"
-            />
-            <div class="media-body">
-              <h3 class="dropdown-item-title">
-                John Pierce
-                <span class="float-right text-sm text-muted"
-                  ><i class="fas fa-star"></i
-                ></span>
-              </h3>
-              <p class="text-sm">I got your message bro</p>
-              <p class="text-sm text-muted">
-                <i class="far fa-clock mr-1"></i> 4 Hours Ago
-              </p>
-            </div>
-          </div>
-          <!-- Message End -->
-        </a>
-        <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item">
-          <!-- Message Start -->
-          <div class="media">
-            <img
-              src="dist/img/user3-128x128.jpg"
-              alt="User Avatar"
-              class="img-size-50 img-circle mr-3"
-            />
-            <div class="media-body">
-              <h3 class="dropdown-item-title">
-                Nora Silvester
-                <span class="float-right text-sm text-warning"
-                  ><i class="fas fa-star"></i
-                ></span>
-              </h3>
-              <p class="text-sm">The subject goes here</p>
-              <p class="text-sm text-muted">
-                <i class="far fa-clock mr-1"></i> 4 Hours Ago
-              </p>
-            </div>
-          </div>
-          <!-- Message End -->
-        </a>
-        <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
       </div>
     </li>
+    <!-- Notifications Dropdown Menu -->
   </ul>
 </nav>
-<mat-accordion>
-  <mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        This is the expansion title
-      </mat-panel-title>
-      <mat-panel-description>
-        This is a summary of the content
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Self aware panel
-      </mat-panel-title>
-      <mat-panel-description>
-        Currently I am {{panelOpenState ? 'open' : 'closed'}}
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>I'm visible because I am open</p>
-  </mat-expansion-panel>
-</mat-accordion>
-
 <!-- /.navbar -->
