--- a/src/app/front-office/user/register/register.component.html
+++ b/src/app/front-office/user/register/register.component.html
@@ -85,6 +85,17 @@
             required
             #password="ngModel"
           />
+            <label for="dateNaissance">Date de naissance : </label>
+            <input
+              type="text"
+              class="form-control"
+              name="dateNaissance"
+              [(ngModel)]="form.dateNaissance"
+              required
+              #dateNaissance="ngModel"
+            />
+            <div id="naissanceHelp" class="form-text">Format dd/MM/YYY </div>
+
           <div class="alert-danger" *ngIf="password.errors && f.submitted">
             <div *ngIf="password.errors.required">Password is required</div>
           </div>
