--- a/src/app/back-office/stock/stock-list/stock-list.component.html
+++ b/src/app/back-office/stock/stock-list/stock-list.component.html
@@ -102,71 +102,91 @@
       *ngIf="updateStockStatus"
     ></app-update-stock>
   </div>
-  <div *ngFor="let item of my_Stock; let i = index" class="col-12 col-md-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="d-flex justify-content-between">
-          <h5 style="font-weight: bold; margin-top: 7px">
-            {{ item.libelleStock | uppercase }}
-          </h5>
-          <div>
-            <button
-              (click)="toogleUpdateStock(item)"
-              class="btn btn-primary mr-2"
-            >
-              <i
-                class="fas fa-pen-square"
-                style="font-size: 1.2rem; cursor: pointer; color: white"
-              ></i>
-            </button>
+  <div class="col-12">
+    <div class="row g-1">
+      <div class="col-lg-12 col-xl-3">
+        <mat-card>
+        <div class="sortSection" >
+          <h3 class="fw-bold">Trier par : </h3>
+          <h5 class=" fw-bold sortItem">libelle : <i (click)="getStockLibelletAsc()" class="fas fa-sort-alpha-up-alt"></i> <i (click)="getStockLibelleDesc()" class="fas fa-sort-alpha-down-alt"></i> </h5>
+          <h5 class=" fw-bold sortItem" >date creation : <i (click)="getStockCreatedAtAsc()"  class="fas fa-sort-up"></i> <i (click)="getStockCreatedAtDesc()" class="fas fa-sort-down"></i> </h5>
+          <h5 class=" fw-bold sortItem" >date modification : <i (click)="getStockUpdatedAtAsc()" class="fas fa-sort-up"></i> <i (click)="getStockUpdatedAtDesc()" class="fas fa-sort-down"></i></h5>
+          <h5 class=" fw-bold sortItem" >nombre des produits :<i  (click)="getStockQtetAsc()"  class="fas fa-sort-numeric-up-alt"></i>  <i (click)="getStockQteDesc()"  class="fas fa-sort-numeric-down-alt"></i>  </h5>
+        </div>
+        </mat-card>
+      </div>
+      <div class="col-lg-12 col-xl">
+      <div class="row">
+        <div *ngFor="let item of my_Stock; let i = index" class="col-12 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <div class="d-flex justify-content-between">
+                <h5 style="font-weight: bold; margin-top: 7px">
+                  {{ item.libelleStock | uppercase }}
+                </h5>
+                <div>
+                  <button
+                    (click)="toogleUpdateStock(item)"
+                    class="btn btn-primary mr-2"
+                  >
+                    <i
+                      class="fas fa-pen-square"
+                      style="font-size: 1.2rem; cursor: pointer; color: white"
+                    ></i>
+                  </button>
 
-            <button
-              data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop"
-              (click)="getStockID(item.idStock)"
-              class="btn btn-danger"
-            >
-              <i
-                class="fas fa-trash-alt"
-                style="font-size: 1.2rem; cursor: pointer"
-              ></i>
-            </button>
+                  <button
+                    data-bs-toggle="modal"
+                    data-bs-target="#staticBackdrop"
+                    (click)="getStockID(item.idStock)"
+                    class="btn btn-danger"
+                  >
+                    <i
+                      class="fas fa-trash-alt"
+                      style="font-size: 1.2rem; cursor: pointer"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card-body" style="background-color: #d9d9d9">
+              <p *ngIf="item.qteMin >= item.qte" class="card-text">
+                votre stock en
+                <span class="fontWeight">rupture</span> la quantité minimale est
+                <span class="fontWeight">{{ item.qteMin }}</span>
+                mais vous avez
+                <span class="fontWeight">{{ item.qte }}</span>
+                produit en stock.
+              </p>
+              <p *ngIf="item.qteMin < item.qte" class="card-text">
+                vous avez <span class="fontWeight">{{ item.qte }}</span> produit en
+                stock et votre quantité minimale est
+                <span class="fontWeight">{{ item.qteMin }}</span>
+              </p>
+              <p class="card-text">
+                <span class="fontWeight"> Date creation : </span> {{ item.createdAt }}
+              </p>
+              <p *ngIf="item.updatedAt != null" class="card-text">
+                <span class="fontWeight"> Date modification : </span>
+                {{ item.updatedAt }}
+              </p>
+              <button
+                [disabled]="item.produitList.length == 0"
+                style="color: white"
+                id="productListButton"
+                class="btn btn-success"
+                [routerLink]="['/back/stock/detailstock', item.idStock]"
+              >
+                Afficher les produit
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="card-body" style="background-color: #d9d9d9">
-        <p *ngIf="item.qteMin >= item.qte" class="card-text">
-          votre stock en
-          <span class="fontWeight">rupture</span> la quantité minimale est
-          <span class="fontWeight">{{ item.qteMin }}</span>
-          mais vous avez
-          <span class="fontWeight">{{ item.qte }}</span>
-          produit en stock.
-        </p>
-        <p *ngIf="item.qteMin < item.qte" class="card-text">
-          vous avez <span class="fontWeight">{{ item.qte }}</span> produit en
-          stock et votre quantité minimale est
-          <span class="fontWeight">{{ item.qteMin }}</span>
-        </p>
-        <p class="card-text">
-          <span class="fontWeight"> Date creation : </span> {{ item.createdAt }}
-        </p>
-        <p *ngIf="item.updatedAt != null" class="card-text">
-          <span class="fontWeight"> Date modification : </span>
-          {{ item.updatedAt }}
-        </p>
-        <button
-          [disabled]="item.produitList.length == 0"
-          style="color: white"
-          id="productListButton"
-          class="btn btn-success"
-          [routerLink]="['/back/stock/detailstock', item.idStock]"
-        >
-          Afficher les produit
-        </button>
       </div>
     </div>
   </div>
+
 </div>
 <div
   class="modal fade"
