--- a/src/app/back-office/sidebar/sidebar.component.html
+++ b/src/app/back-office/sidebar/sidebar.component.html
@@ -56,6 +56,14 @@
             </ul>
        </li>
              <li  class="nav-item ml-1">
+              <li  class="nav-item ml-2">
+                <a [routerLink]="['/back/user/addadmin']" class="nav-link">
+                  <i class="fas fa-road"></i>
+                  <p>
+                    Users 
+                  </p>
+                </a>
+              </li>
         <li  class="nav-item ml-2">
           <a [routerLink]="['/back/stock']" class="nav-link">
             <i class="fas fa-cubes"></i>
