--- a/src/app/back-office/user/add-admin/add-admin.component.html
+++ b/src/app/back-office/user/add-admin/add-admin.component.html
@@ -1,6 +1,8 @@
+<div class="container" >
+<app-list-users  ></app-list-users>
 <div class="col-md-12">
     <div class="card card-container">
-     
+
         <form
           
           name="form"
@@ -31,3 +33,4 @@
     
       </div>
     </div>
+  </div>
