--- a/src/app/front-office/product/product-list/product-list.component.html
+++ b/src/app/front-office/product/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <section class="contact py-lg-4 py-md-3 py-sm-3 py-3">
-  <div class="container-fluid py-lg-5 py-md-4 py-sm-4 py-3">
+  <div >
      <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Products Shop</h3>
      <div class="row">
        <div class="side-bar col-lg-3">
@@ -7,9 +7,9 @@
        </div>
         <div class="left-ads-display col-lg-9">
            <div class="row">
-         
+
                 <div class="col-lg-4 col-md-6 col-sm-6 product-men women_two" *ngFor="let p of ListProduct">
-                
+
                   <div class="product-toys-info">
                      <div class="men-pro-item">
                         <div class="men-thumb-item">
@@ -74,7 +74,7 @@
                            </div>
                            <div class="clearfix"></div>
                         </div>
-                  
+
                   </div>
                </div>
 
@@ -87,15 +87,15 @@
 </section>
 
 <div class="modal fade" id="personal-details" role="dialog">
-   <div class="modal-dialog">        
+   <div class="modal-dialog">
      <!-- Modal content-->
-     <div class="modal-content">           
-       <div class="modal-body"> 
+     <div class="modal-content">
+       <div class="modal-body">
          <link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous">
 
-         <div class="container">
+         <div >
              <div class="row">
-               
+
                      <div class="osahan-account-page-right shadow-sm bg-white p-4 h-100">
                          <div class="tab-content" id="myTabContent">
                              <div class="tab-pane fade  active show" id="favourites" role="tabpanel" aria-labelledby="favourites-tab">
@@ -113,13 +113,13 @@
                                            </div>
                                            <div class="p-3 position-relative">
                                                <div class="list-card-body">
-                                                   <h6 class="mb-1"><a href="#" class="text-black">Details du produit: 
+                                                   <h6 class="mb-1"><a href="#" class="text-black">Details du produit:
                                                     </a>
                                                  </h6>
                                                    <p class="text-gray mb-3"></p>
                                                    <p class="text-gray mb-3 time"><span class="float-right text-black-50">  prixUnitaire : {{prixUnitaire}}</span></p>
                                                </div>
-                                
+
                                            </div>
                                        </div>
                                    </div>
@@ -127,7 +127,7 @@
                              </div>
                          </div>
                      </div>
-            
+
              </div>
          </div>
     <!--  Prix: {{p.prixUnitaire}} -->
@@ -135,7 +135,7 @@
      </div>
    </div>
 </div>
-<!--  
+<!--
 <li><a href="javascript:void()" data-toggle="modal" data-target="#personal-details">user 1</a></li>
 <li><a href="javascript:void()" data-toggle="modal" data-target="#personal-details">user 2</a></li>...
  -->
