--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <div id="app" >
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <div class="container-fluid ">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">4TWIN</a>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page"  *ngIf="isLoggedIn" href="#" routerLink="home/user/profile">Profile</a>
           </li>
-      
+
           <li class="nav-item " *ngIf="!isLoggedIn">
             <a class="nav-link"  href="#" routerLink="home/user/login">Login</a>
           </li>
           <li class="nav-item" *ngIf="!isLoggedIn">
             <a class="nav-link"  href="#" routerLink="home/user/register">Sign Up</a>
           </li>
-     
+
           <li class="nav-item">
             <a class="nav-link disabled ml-auto" *ngIf="isLoggedIn" href="#" tabindex="-1" aria-disabled="true">{{ username }}</a>
           </li>
@@ -32,8 +32,8 @@
   </nav>
 
 
-  
-    <div class="container">
+
+    <div>
       <router-outlet></router-outlet>
     </div>
   </div>
