--- a/src/app/back-office/stock/stock-list/stock-list.component.css
+++ b/src/app/back-office/stock/stock-list/stock-list.component.css
@@ -1,10 +1,7 @@
 .card {
   min-height: 16rem;
 }
-#productListButton {
-  position: absolute;
-  bottom: 0.5rem !important;
-}
+
 .fontWeight {
   font-weight: 700;
   color: red;
@@ -17,16 +14,18 @@
 }
 .sortSection {
   display: flex;
-  flex-direction: column;
-  padding: 1rem 0;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 0 0;
 }
 .sortSection h5 {
-  margin: 1rem 0;
+  margin: 0  0;
 }
 .sortItem i {
   color: #0858d8cf;
   cursor: pointer;
-  margin: 0 10px 0 0;
+  margin: 0 0.5rem 0 0;
   transition: ease-in-out 0.2s;
   font-size: 1rem;
 }
@@ -42,5 +41,4 @@
   .sortSection h5 {
     margin: 0.3rem 1rem;
   }
-
 }
