--- a/src/app/back-office/user/user-action-button/user-action-button.component.html
+++ b/src/app/back-office/user/user-action-button/user-action-button.component.html
@@ -1,1 +1,3 @@
-<p>user-action-button works!</p>
+<div id = "button">
+    <button type="button" class="btn btn-dark ml-2" (click)="onClickButton($event)" > Enregistrer </button>
+  </div>
